...
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordInputLayout" />

    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
...
